# crack_ver_Cplus

./: CMakeLists.txt  README.md
include/misora2_cracks/: constants.hpp  cracks_component.hpp  cv_mat_type_adapter.hpp  detection.hpp  lsd.h  size.hpp
include/misora2_cracks/nn/: autobackend.h
include/misora2_cracks/utils/: augment.hpp  common.hpp  ops.hpp
src/: detection.cpp  detection_main.cpp  lsd.c  size.cpp  size_main.cpp
src/nn/: autobackend.cpp  onnx_model_base.cpp
src/utils/: augment.cpp  common.cpp  ops.cpp
